k8s/07-flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: medlink
spec:
  selector:
    app: flask-app
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
