k8s/10-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: medlink
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
