k8s/11-medlink-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medlink-ingress
  namespace: medlink
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: medlink.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
